--- a/index.html
+++ b/index.html
@@ -1,1 +1,254 @@
+<!--
+  index.html
+  For: jsykesdesign.com (GitHub Pages)
+  Single-file portfolio landing page with glassmorphism styling.
+  - Responsive
+  - Hero, work gallery, about, contact
+  - Lightweight CSS + tiny JS for interactions
+  To deploy: push this file as the site root (for repo named jsykesdesign.github.io)
+  or enable GitHub Pages on a project repo and set this file as index.html.
+  Add a CNAME file containing: jsykesdesign.com
+-->
+
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="description" content="Joshua Sykes — Product & Industrial Designer. Portfolio showcasing product design, concept development and small-run homewares.">
+  <link rel="canonical" href="https://jsykesdesign.com/">
+  <title>JSykes Design — Product & Industrial Design</title>
+
+  <!-- Simple favicons (replace with your own) -->
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🛠️</text></svg>"> 
+
+  <style>
+    :root{
+      --bg:#0f1724; /* deep navy */
+      --glass-1: rgba(255,255,255,0.06);
+      --glass-2: rgba(255,255,255,0.08);
+      --accent: #7dd3fc; /* sky-ish */
+      --muted: rgba(255,255,255,0.6);
+      --glass-border: rgba(255,255,255,0.12);
+      --max-width:1100px;
+      color-scheme: dark;
+      font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, 'Helvetica Neue', Arial;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      background: radial-gradient(1200px 600px at 10% 10%, rgba(125,211,252,0.06), transparent),
+                  radial-gradient(1000px 600px at 90% 90%, rgba(124,58,237,0.04), transparent),
+                  var(--bg);
+      color:#e6eef8;
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+      padding:48px 20px;
+      display:flex;
+      justify-content:center;
+    }
+
+    .container{width:100%;max-width:var(--max-width)}
+
+    header{
+      display:flex;align-items:center;justify-content:space-between;margin-bottom:36px
+    }
+    .brand{display:flex;align-items:center;gap:14px}
+    .logo{
+      width:54px;height:54px;border-radius:12px;display:flex;align-items:center;justify-content:center;font-weight:700;font-size:20px;background:linear-gradient(135deg,var(--accent),#7c3aed);box-shadow:0 6px 20px rgba(0,0,0,0.4)
+    }
+    nav a{color:var(--muted);text-decoration:none;margin-left:18px;font-weight:600}
+    nav a:hover{color:var(--accent)}
+
+    /* Hero */
+    .hero{
+      display:grid;grid-template-columns:1fr 420px;gap:28px;align-items:center;margin-bottom:40px
+    }
+    .card{
+      background: linear-gradient(180deg,var(--glass-1), rgba(255,255,255,0.02));
+      border:1px solid var(--glass-border);
+      backdrop-filter: blur(10px) saturate(120%);
+      -webkit-backdrop-filter: blur(10px) saturate(120%);
+      border-radius:16px;padding:28px
+    }
+    .hero h1{margin:0 0 8px 0;font-size:36px;line-height:1.02}
+    .hero p.lead{margin:0;color:var(--muted);font-size:15px}
+
+    /* Quick links */
+    .cta-row{display:flex;gap:12px;margin-top:18px}
+    .btn{padding:10px 14px;border-radius:10px;border:0;font-weight:700;cursor:pointer}
+    .btn-ghost{background:transparent;color:var(--accent);border:1px solid rgba(125,211,252,0.12)}
+    .btn-primary{background:linear-gradient(90deg,var(--accent),#c084fc);color:#041024}
+
+    /* Gallery */
+    .gallery{display:grid;grid-template-columns:repeat(3,1fr);gap:16px;margin-top:20px}
+    .tile{position:relative;overflow:hidden;border-radius:12px;min-height:160px}
+    .tile img{width:100%;height:100%;object-fit:cover;display:block;transform:scale(1);transition:transform .45s cubic-bezier(.2,.9,.2,1)}
+    .tile:hover img{transform:scale(1.06)}
+    .tile .meta{position:absolute;left:12px;bottom:12px;background:linear-gradient(180deg, rgba(0,0,0,0.18), rgba(0,0,0,0.32));padding:8px 10px;border-radius:8px;font-weight:700}
+
+    /* About + contact */
+    .split{display:grid;grid-template-columns:1fr 320px;gap:20px;margin-top:28px}
+    .about p{color:var(--muted);line-height:1.6}
+    form label{display:block;margin-bottom:6px;font-size:13px;color:var(--muted)}
+    form input, form textarea{width:100%;padding:10px;border-radius:8px;border:1px solid var(--glass-border);background:transparent;color:inherit}
+    form textarea{min-height:120px;resize:vertical}
+    .foot{margin-top:28px;text-align:center;color:rgba(255,255,255,0.45);font-size:13px}
+
+    /* Responsive */
+    @media (max-width:980px){
+      .hero{grid-template-columns:1fr;}
+      .split{grid-template-columns:1fr}
+      .gallery{grid-template-columns:repeat(2,1fr)}
+    }
+    @media (max-width:560px){
+      .gallery{grid-template-columns:1fr}
+      nav a{margin-left:10px;font-size:14px}
+      .hero h1{font-size:28px}
+    }
+
+    /* tiny focus styles */
+    a:focus, button:focus, input:focus, textarea:focus{outline:2px solid rgba(125,211,252,0.14);outline-offset:2px}
+
+  </style>
+</head>
+<body>
+  <div class="container">
+
+    <header>
+      <div class="brand">
+        <div class="logo">JS</div>
+        <div>
+          <div style="font-weight:800">JSykes Design</div>
+          <div style="font-size:13px;color:var(--muted)">Product & Industrial Designer</div>
+        </div>
+      </div>
+
+      <nav>
+        <a href="#work">Work</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </header>
+
+    <main>
+      <section class="hero card">
+        <div>
+          <h1>Designing considered products — from concept to small-run production</h1>
+          <p class="lead">I design functional objects that are beautiful to hold and simple to manufacture. I focus on homewares, portable coffee gear and limited-run pieces that balance aesthetics and engineering.</p>
+          <div class="cta-row">
+            <a class="btn btn-primary" href="#work">View Work</a>
+            <a class="btn btn-ghost" href="#contact">Get in touch</a>
+          </div>
+
+          <div style="margin-top:18px;color:var(--muted);font-size:13px">Based in Sydney • Available for freelance and short-term consults.</div>
+        </div>
+
+        <aside style="padding:6px 0 0 0">
+          <div class="card" style="display:flex;flex-direction:column;gap:12px">
+            <div style="font-weight:800">Quick highlights</div>
+            <div style="font-size:13px;color:var(--muted)">Industrial design, CAD, prototyping, small-batch production, cocktail & bar product consultation.</div>
+
+            <div style="display:flex;gap:8px;margin-top:8px">
+              <div style="flex:1;background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent);padding:10px;border-radius:10px;text-align:center">Portfolio<br><strong>24 projects</strong></div>
+              <div style="flex:1;background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent);padding:10px;border-radius:10px;text-align:center">Experience<br><strong>Bar & Product</strong></div>
+            </div>
+          </div>
+        </aside>
+      </section>
+
+      <section id="work" class="card">
+        <h2 style="margin-top:0">Selected work</h2>
+        <div class="gallery" aria-label="Portfolio gallery">
+          <a class="tile" href="#" aria-label="Project 1 preview">
+            <img src="https://images.unsplash.com/photo-1582719478250-0b6a19b0b3f0?w=1200&q=60&auto=format&fit=crop" alt="Project thumbnail 1">
+            <div class="meta">Portable Espresso — concept</div>
+          </a>
+
+          <a class="tile" href="#">
+            <img src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?w=1200&q=60&auto=format&fit=crop" alt="Project thumbnail 2">
+            <div class="meta">Lamps — small batch</div>
+          </a>
+
+          <a class="tile" href="#">
+            <img src="https://images.unsplash.com/photo-1545235617-9465f3b4e5b9?w=1200&q=60&auto=format&fit=crop" alt="Project thumbnail 3">
+            <div class="meta">Barware — prototypes</div>
+          </a>
+
+          <a class="tile" href="#">
+            <img src="https://images.unsplash.com/photo-1526045612212-70caf35c14df?w=1200&q=60&auto=format&fit=crop" alt="Project thumbnail 4">
+            <div class="meta">Everyday objects</div>
+          </a>
+
+          <a class="tile" href="#">
+            <img src="https://images.unsplash.com/photo-1526318472351-c75fcf0706b0?w=1200&q=60&auto=format&fit=crop" alt="Project thumbnail 5">
+            <div class="meta">Workshop builds</div>
+          </a>
+
+          <a class="tile" href="#">
+            <img src="https://images.unsplash.com/photo-1548588680-3d3bff0b9f0a?w=1200&q=60&auto=format&fit=crop" alt="Project thumbnail 6">
+            <div class="meta">Concept study</div>
+          </a>
+        </div>
+
+        <div style="margin-top:16px;color:var(--muted);font-size:13px">Click any project to see more (replace the image links with your own project pages or modal views).</div>
+      </section>
+
+      <section id="about" class="split">
+        <div class="card about">
+          <h3 style="margin-top:0">About</h3>
+          <p>I'm Joshua Sykes — a product designer who loves making things that feel right in the hand and are honest to manufacture. My background spans hospitality product consultation and prototyping for small-scale production. I enjoy woodworking, metalwork, CAD modelling and testing with real users.</p>
+
+          <h4 style="margin-bottom:6px">Process</h4>
+          <p class="muted">Research → Sketching → CAD → Rapid prototyping → Testing → Iterate</p>
+
+          <div style="margin-top:12px;display:flex;gap:8px;flex-wrap:wrap">
+            <div style="padding:8px 10px;border-radius:10px;border:1px solid var(--glass-border);font-size:13px">CAD (SolidWorks, Fusion)</div>
+            <div style="padding:8px 10px;border-radius:10px;border:1px solid var(--glass-border);font-size:13px">Prototyping</div>
+            <div style="padding:8px 10px;border-radius:10px;border:1px solid var(--glass-border);font-size:13px">Small-run production</div>
+          </div>
+        </div>
+
+        <aside class="card">
+          <h4 style="margin-top:0">Contact</h4>
+          <form id="contact" action="mailto:hello@jsykesdesign.com" method="get" enctype="text/plain">
+            <label for="name">Your name</label>
+            <input id="name" name="name" placeholder="e.g. Alex" required>
+
+            <label for="email">Email</label>
+            <input id="email" name="email" type="email" placeholder="you@domain.com" required>
+
+            <label for="message">Message</label>
+            <textarea id="message" name="message" placeholder="Short note..." required></textarea>
+
+            <div style="margin-top:10px;display:flex;gap:8px">
+              <button type="submit" class="btn btn-primary">Send</button>
+              <button type="button" onclick="copyEmail()" class="btn btn-ghost">Copy email</button>
+            </div>
+          </form>
+
+          <div style="margin-top:12px;color:var(--muted);font-size:13px">Or email: <strong>hello@jsykesdesign.com</strong></div>
+        </aside>
+      </section>
+
+      <div class="foot">© <span id="year"></span> JSykes Design — Built with care. Hosted on GitHub Pages.</div>
+
+    </main>
+  </div>
+
+  <script>
+    // Year
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    function copyEmail(){
+      navigator.clipboard?.writeText('hello@jsykesdesign.com').then(()=>{
+        alert('Email copied to clipboard: hello@jsykesdesign.com');
+      }).catch(()=>{
+        prompt('Copy email', 'hello@jsykesdesign.com');
+      })
+    }
+  </script>
+</body>
+</html>
 
